<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_title_logo"
        android:layout_width="267dp"
        android:layout_height="77dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/iv_tick1"
        android:layout_width="26dp"
        android:layout_height="21dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="130dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_title_logo"
        app:srcCompat="@drawable/tick" />

    <TextView
        android:id="@+id/tv_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="133dp"
        android:text="@string/car_health_updates"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toEndOf="@+id/iv_tick1"
        app:layout_constraintTop_toBottomOf="@+id/iv_title_logo" />

    <ImageView
        android:id="@+id/iv_tick2"
        android:layout_width="26dp"
        android:layout_height="21dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="237dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_title_logo"
        app:srcCompat="@drawable/tick" />

    <TextView
        android:id="@+id/tv_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="239dp"
        android:text="@string/request_a_rescue_online"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toEndOf="@+id/iv_tick2"
        app:layout_constraintTop_toBottomOf="@+id/iv_title_logo" />

    <ImageView
        android:id="@+id/iv_tick3"
        android:layout_width="26dp"
        android:layout_height="21dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="185dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_title_logo"
        app:srcCompat="@drawable/tick" />

    <TextView
        android:id="@+id/tv_text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="188dp"
        android:text="@string/policy_information"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toEndOf="@+id/iv_tick3"
        app:layout_constraintTop_toBottomOf="@+id/iv_title_logo" />

    <TextView
        android:id="@+id/tv_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="80dp"
        android:text="GreenFlag customers can create an account \n to access"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_title_logo" />

    <Button
        android:id="@+id/btn_create_acc"
        android:layout_width="221dp"
        android:layout_height="57dp"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="45dp"
        android:background="@drawable/gradient_button_background"
        android:text="@string/create_an_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>